# bulkhead-lm

./: .gitignore  .opamignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL_PROMPT.md  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  aegis_lm.opam  bulkhead_lm.opam  dune-project  install.sh  readme_for_dummies.md  run-ollama.sh  run.sh
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md  release.yml
config/: example.gateway.json  example.ollama_swarm.gateway.json  starter.gateway.json
src/: dune
src/client/: admin_assistant.ml  admin_assistant_constants.ml  admin_assistant_plan.ml  starter_attachment.ml  starter_constants.ml  starter_conversation.ml  starter_local_tools.ml  starter_model_catalog.ml  starter_packaging.ml  starter_packaging_constants.ml  starter_profile.ml  starter_response_signal.ml  starter_runtime.ml  starter_saved_config.ml  starter_session.ml  starter_terminal.ml  starter_wizard.ml  terminal_client.ml  terminal_ops.ml  terminal_worker.ml
src/connectors/: discord_connector.ml  google_chat_connector.ml  google_chat_id_token.ml  instagram_connector.ml  line_connector.ml  messenger_connector.ml  meta_connector_common.ml  telegram_connector.ml  user_connector_common.ml  user_connector_registry.ml  user_connector_router.ml  viber_connector.ml  wechat_connector.ml  wechat_connector_crypto.ml  wechat_connector_xml.ml  whatsapp_connector.ml
src/domain/: config.ml  config_test_support.ml  domain_error.ml  model_catalog.ml  openai_types.ml  responses_api.ml
src/http/: admin_control.ml  admin_control_constants.ml  json_response.ml  request_body.ml  server.ml  sse_stream.ml
src/persistence/: model_listing_cache.ml  persistent_store.ml
src/providers/: anthropic_provider.ml  openai_compat_provider.ml  provider_client.ml  provider_mock.ml  provider_models_listing.ml  provider_registry.ml  provider_stream.ml  ssh_peer_protocol.ml  ssh_peer_provider.ml
src/runtime/: backend_circuit.ml  budget_ledger.ml  pool_latency.ml  pool_routing.ml  pool_runtime.ml  pool_selector.ml  rate_limiter.ml  router.ml  runtime_control.ml  runtime_state.ml  session_memory.ml  session_memory_defaults.ml  timeout_guard.ml
src/security/: auth.ml  egress_policy.ml  output_guard.ml  peer_mesh.ml  privacy_filter.ml  secret_redaction.ml  security_policy.ml  text_guard_common.ml  threat_detector.ml
(+67 files in other folders)
