(include_subdirs unqualified)

(library
 (name bulkhead_lm)
 (public_name bulkhead_lm)
 (wrapped true)
 (libraries
  lwt
  lwt.unix
  yojson
  uri
  cohttp-lwt-unix
  sqlite3
  cmdliner
  linenoise
  logs
  fmt
  x509
  mirage-crypto
  mirage-crypto-ec
  mirage-crypto-rng
  mirage-crypto-rng.unix
  str
  digestif
  uuidm
  base64))
